Добавлен раздел о себе

--- a/resume-blue.html
+++ b/resume-blue.html
@@ -42,6 +42,12 @@
 * [React-portfolio](https://github.com/Teamofeyy/Portfolio-React) - [сайт](https://teamofeyy.github.io/Portfolio/) портфолио для разработчика
 * [Weekly-bot](https://github.com/Teamofeyy/WeeklyBot) - бот на Python для получения задач и их статусов из GitHub Projects
 
+## О себе
+
+* Тимофей, 18 лет, люблю создавать полезные и удобные интерфейсы, разбираться в новых технологиях и применять их на практике.  
+* Умею быстро адаптироваться под задачу, не боюсь сложностей и беру на себя ответственность.  
+* Интересуюсь мобильной разработкой, DevOps,  инфраструктурой и backend'ом — особенно нравится, когда можно покрыть весь стек и видеть полный результат работы.  
+
 ## Личные качества
 
 * Умею работать в команде и самостоятельно брать ответственность
