Update age and education details in resume

--- a/resume-blue.html
+++ b/resume-blue.html
@@ -44,7 +44,7 @@
 
 ## О себе
 
-* Тимофей, 18 лет, люблю создавать полезные и удобные интерфейсы, разбираться в новых технологиях и применять их на практике.  
+* Тимофей, 19 лет, люблю создавать полезные и удобные интерфейсы, разбираться в новых технологиях и применять их на практике.  
 * Умею быстро адаптироваться под задачу, не боюсь сложностей и беру на себя ответственность.  
 * Интересуюсь мобильной разработкой, DevOps,  инфраструктурой и backend'ом — особенно нравится, когда можно покрыть весь стек и видеть полный результат работы.  
 
@@ -56,7 +56,7 @@
 
 ## Образование
 
-* ЧОУ ВО ИУБиП - Информационные системы и программирование (2022 - Настоящее время, 3 курс)
+* ЧОУ ВО ИУБиП - Информационные системы и программирование (2022 - 2026, 4 курс)
 
 ## Дополнительная информация
 
